syntax = "proto3";

package address;

option java_package = "com.github.fidgetting";

import "address.proto";

service AddressService {
  rpc getAddress(GetAddressRequest) returns (GetAddressResponse);
  rpc getAddresses(GetAddressesRequest) returns (stream GetAddressesResponse);
  rpc setAddress(SetAddressRequest) returns (SetAddressResponse);
  rpc removeAddress(RemoveAddressRequest) returns (RemoveAddressResponse);
}

message GetAddressRequest {
  uint64 id = 1;
}

message GetAddressResponse {
  Address address = 1;
}

message GetAddressesRequest {
  repeated uint64 ids = 1;
}

message GetAddressesResponse {
  Address address = 1;
}

message SetAddressRequest {
  Address address = 1;
}

message SetAddressResponse {
  Address address = 1;
}

message RemoveAddressRequest {
  uint64 id = 1;
}

message RemoveAddressResponse {
  Address address = 1;
}
